# ipgp-addons

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/gui/: CMakeLists.txt  README
apps/gui/scaemv/: CMakeLists.txt  Changelog  advancedeventmanagerview.cpp  advancedeventmanagerview.h  advancedeventmanagerview.ui  configuredialog.ui  main.cpp
apps/gui/scaemv/config/: scaemv.cfg
apps/gui/scaemv/descriptions/: scaemv-fr.rst  scaemv.rst  scaemv.xml
apps/gui/scbev/: CMakeLists.txt  bulletinexporterview.cpp  bulletinexporterview.h  bulletinexporterview.qrc  bulletinexporterview.ui  exportdialog.ui  filterbox.ui  main.cpp
apps/gui/scbev/config/: scbev.cfg
apps/gui/scbev/descriptions/: scbev-fr.rst  scbev.rst  scbev.xml
apps/gui/scwev/: CMakeLists.txt  configurationdialog.ui  main.cpp  worldearthquakeview.cpp  worldearthquakeview.h  worldearthquakeview.ui
apps/gui/scwev/config/: scwev.cfg
apps/gui/scwev/descriptions/: scwev-fr.rst  scwev.rst  scwev.xml
apps/wo2sc3/: CMakeLists.txt  main.cpp  wo2sc3.cpp  wo2sc3.h
apps/wo2sc3/config/: wo2sc3.cfg
apps/wo2sc3/descriptions/: wo2sc3.rst  wo2sc3.xml
libs/ipgp/: CMakeLists.txt
libs/ipgp/core/: CMakeLists.txt  api.h
libs/ipgp/core/bulletin/: CMakeLists.txt  bulletin.cpp  bulletin.h  isf.cpp  isf.h
libs/ipgp/core/datamodel/: CMakeLists.txt  flags.h  objectcache.cpp  objectcache.h  recordcache.cpp  recordcache.h  recordsequencer.cpp  recordsequencer.h  types.h
libs/ipgp/core/file/: CMakeLists.txt  file.cpp  file.h
libs/ipgp/core/geo/: CMakeLists.txt  geo.cpp  geo.h
libs/ipgp/core/math/: CMakeLists.txt  math.cpp  math.h
libs/ipgp/core/misc/: CMakeLists.txt  misc.cpp  misc.h  types.h
libs/ipgp/core/network/: CMakeLists.txt  smtpclient.cpp  smtpclient.h
libs/ipgp/core/string/: CMakeLists.txt  string.cpp  string.h
libs/ipgp/gui/: CMakeLists.txt  api.h  defs.h
libs/ipgp/gui/client/: CMakeLists.txt  about.ui  application.cpp  application.h  client.qrc  connectionsetup.ui  messagereader.cpp  messagereader.h  misc.h  plugindialog.ui  scheme.cpp  scheme.h
libs/ipgp/gui/core/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  pdfbulletin.cpp  pdfbulletin.h
libs/ipgp/gui/datamodel/: CMakeLists.txt  colormapviewer.cpp  colormapviewer.h  datamodel.qrc  frequencyviewer.cpp  frequencyviewer.h  logdialog.cpp  logdialog.h  logdialog.ui  mainwindow.h  misc.h  plottingwidget.cpp  plottingwidget.h  qcustomitems.hpp  qcustomstandarditem.cpp  qcustomstandarditem.h  recordentity.cpp  recordentity.h  recordmanager.cpp  recordmanager.h  recordviewer.cpp  recordviewer.h  squarrezoomplot.cpp  squarrezoomplot.h  streamdelegate.cpp  streamdelegate.h
libs/ipgp/gui/datamodel/crosssection/: CMakeLists.txt  crosssection.cpp  crosssection.h  crosssection.ui
libs/ipgp/gui/datamodel/eventenergy/: CMakeLists.txt  eventenergy.cpp  eventenergy.h  eventenergy.ui
libs/ipgp/gui/datamodel/eventlist/: CMakeLists.txt  eventlistdelegate.cpp  eventlistdelegate.h  eventlistwidget.cpp  eventlistwidget.h  eventlistwidget.qrc  eventlistwidget.ui
libs/ipgp/gui/datamodel/eventphaseduration/: CMakeLists.txt  eventphaseduration.cpp  eventphaseduration.h  eventphaseduration.ui
libs/ipgp/gui/datamodel/eventtypevariance/: CMakeLists.txt  eventtypevariancewidget.cpp  eventtypevariancewidget.h  eventtypevariancewidget.ui
libs/ipgp/gui/datamodel/gutenbergrichter/: CMakeLists.txt  gutenbergrichterwidget.cpp  gutenbergrichterwidget.h  gutenbergrichterwidget.ui
libs/ipgp/gui/datamodel/hypocentersdrift/: CMakeLists.txt  hypocentersdriftwidget.cpp  (+2 more)
libs/ipgp/gui/map/: CMakeLists.txt  canvas.cpp  canvas.h  config.h  decorator.cpp  decorator.h  geometry.cpp  geometry.h  layer.cpp  layer.h  map.qrc  mapdescriptor.hpp  mapwidget.cpp  mapwidget.h  tile.cpp  tile.h  util.cpp  util.h
libs/ipgp/gui/math/: CMakeLists.txt  math.cpp  math.h
libs/ipgp/gui/misc/: CMakeLists.txt  misc.cpp  misc.h
libs/ipgp/gui/opengl/: CMakeLists.txt  camera.cpp  camera.h  canvas.cpp  canvas.h  gl.cpp  gl.h  graphicrenderer.cpp  graphicrenderer.h  mmath.cpp  mmath.h  opengl.qrc  renderer.cpp  renderer.h  topographyfile.cpp  topographyfile.h  topographyrenderer.cpp  topographyrenderer.h  topographyrenderersettings.cpp  topographyrenderersettings.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h
(+131 files in other folders)
