SC_BEGIN_PACKAGE(IPGPADDONS)

OPTION(SC_IPGPADDONS_GUI_APPS "Build IPGP graphical user interface (requires Qt4 and OpenGL)" OFF)
OPTION(SC_IPGPADDONS_WO_APPS "Build IPGP apps to interact with WebObs (wo2sc3)" OFF)
SET(CPACK_PACKAGE_EXECUTABLES "scaemv;scaemv" "scbev;scbev" "scwev;scwev")

SET(SC3_TRUNK_SRC_DIR ${CMAKE_SOURCE_DIR}/src/trunk)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../system/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../system/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../trunk/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../trunk/libs)

SUBDIRS(libs apps)
