IF(SC_IPGPADDONS_GUI_APPS)
	FIND_PACKAGE(Qt4 REQUIRED)
	IF (QT4_FOUND)
	    MESSAGE(STATUS "... IPGP GUI build is true")
		SUBDIRS(gui)
	ELSE (QT4_FOUND "NO")
		MESSAGE(STATUS "... Qt4 not found, IPGP GUIs won't be built")
	ENDIF (QT4_FOUND)
ENDIF(SC_IPGPADDONS_GUI_APPS)

IF(SC_IPGPADDONS_WO_APPS)
	SUBDIRS(wo2sc3)
ENDIF(SC_IPGPADDONS_WO_APPS)
