SET(QT_USE_QTSQL TRUE)
SET(QT_USE_QTXML TRUE)
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTWEBKIT TRUE)

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

IF (QT4_FOUND)
    IF (OPENGL_FOUND)
        SET(IPGPADDONS_BUILD_GUI "TRUE")
    	SC_ADD_SUBDIRS(core gui)
    ELSE (OPENGL_FOUND "NO")
        SET(IPGPADDONS_BUILD_GUI "FALSE")
        MESSAGE(STATUS "-- OpenGL library in mandatory for building package")
    ENDIF (OPENGL_FOUND)
ELSE (QT4_FOUND "NO")
    MESSAGE(STATUS "-- No Qt4 package found, only core libraries and apps will be compiled")
	SC_ADD_SUBDIRS(core)
ENDIF (QT4_FOUND)
