SET(CMAKE_BUILD_TYPE "Release")

SET(PACKAGE_NAME ADVANCEDEVENTMANAGERVIEW)
SET(APP_NAME scaemv)
SET(${PACKAGE_NAME}_SOURCES advancedeventmanagerview.cpp main.cpp)
SET(${PACKAGE_NAME}_HEADERS)
SET(${PACKAGE_NAME}_MOC_HEADERS	advancedeventmanagerview.h)
SET(${PACKAGE_NAME}_UI advancedeventmanagerview.ui configuredialog.ui)
SET(${PACKAGE_NAME}_RESOURCES)

SC_ADD_GUI_EXECUTABLE(${PACKAGE_NAME} ${APP_NAME})
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} ipgp_qt4)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
