SET(CMAKE_BUILD_TYPE "Release")

SET(PACKAGE_NAME WORLDEARTHQUAKEVIEW)
SET(APP_NAME scwev)
SET(${PACKAGE_NAME}_SOURCES main.cpp worldearthquakeview.cpp)
SET(${PACKAGE_NAME}_HEADERS)
SET(${PACKAGE_NAME}_MOC_HEADERS	worldearthquakeview.h)
SET(${PACKAGE_NAME}_UI configurationdialog.ui worldearthquakeview.ui)
SET(${PACKAGE_NAME}_RESOURCES)

SC_ADD_GUI_EXECUTABLE(${PACKAGE_NAME} ${APP_NAME})
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} ipgp_qt4)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})